# homework-axa-it

./: .pre-commit-config.yaml  README-SOLUTION.md  README.md  TODO.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml  parameters_reporting.yml
docs/source/: conf.py  index.md  index.rst  pipelines.md
docs/source/components/: data_science.md  evaluation.md  preprocessing.md
docs/source/config/: catalog.md  parameters.md
notebooks/: README.MD  modeling_starter.ipynb  modelling_starter_improved.ipynb
scripts/: check_style.sh  download_pg15training.sh  format.sh  test_e2e.sh  test_integration.sh  test_unit.sh
src/mlstream/: __main__.py  pipeline_registry.py  settings.py
src/mlstream/datasets/: __init__.py  rda_dataset.py
src/mlstream/pipelines/data_processing/: base_processor.py  dataframe_processor.py  dataframe_processor_config.py  nodes.py  pipeline.py
src/mlstream/pipelines/data_science/: mlflow_utils.py  models.py  nodes.py  optuna_train.py  pipeline.py  trial.py
src/mlstream/pipelines/reporting/: nodes.py  pipeline.py
tests/: conftest.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_processing_to_science.py  test_science_to_reporting.py
tests/unit/pipelines/data_processing/: test_data_processing_nodes.py  test_dataframe_processor.py
tests/unit/pipelines/data_science/: test_nodes.py  test_optuna_train.py
tests/unit/pipelines/reporting/: test_nodes.py
