[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "mlstream"
readme = "README.md"
dynamic = ["version"]

# ---- Runtime dependencies (added: matplotlib, pydantic, optuna, lightgbm, rdata) ----
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro[jupyter]~=1.0.0",
    "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0",
    "kedro-viz>=6.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
    "matplotlib>=3.7",     # for reporting nodes
    "pydantic>=2.0",       # dataframe_processor_config
    "optuna>=3.0",         # optuna_train / trials
    "lightgbm>=4.0",       # models.py
    "rdata>=0.10",         # rda_dataset
]

[project.scripts]
"mlstream" = "mlstream.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1",
    "sphinxcontrib-mermaid>=0.9"
]

# ---- Dev tools (expanded so CI can do pip install .[dev]) ----
dev = [
    "pytest~=7.2",
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1,<2.0",
    "ruff~=0.12.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.6",
    "bandit>=1.7.9",
    "pre-commit>=3.6",
]

[tool.setuptools.dynamic]
version = {attr = "mlstream.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "mlstream"
project_name = "mlstream"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/mlstream -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint.per-file-ignores]
"src/mlstream/pipelines/data_science/optuna_train.py" = ["PLR0913"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "584202f89503492d9483e8a6dfdfb67b"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = false
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = ["*"]
ignore_missing_imports = true
